# sql-query-parser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  lexer.h  lexer.l  main.c  scanner.c  test.c  tsqlp.c  tsqlp.h
include/: tsqlp.h
lib/: tsqlp.h
platform/mysql/: lexer.c  lexer.l  parser.c  scanner.c
